--- a/src/main/resources/FXML/MovieSeriesDetails.fxml
+++ b/src/main/resources/FXML/MovieSeriesDetails.fxml
@@ -3,8 +3,10 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.GaussianBlur?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -91,7 +93,10 @@
                         </VBox>
                      </children>
                   </HBox>
-                  <TableView fx:id="tab" prefHeight="562.0" prefWidth="1067.0"  >
+                  <ListView fx:id="actorslist" prefHeight="410.0" prefWidth="952.0" />
+                  <Button fx:id="commentbtn" mnemonicParsing="false" text="add comment" translateX="175.0" translateY="106.0" />
+                  <TextField fx:id="txtcomment" prefHeight="26.0" prefWidth="631.0" translateX="-200.0" />
+                  <TableView fx:id="tab" prefHeight="410.0" prefWidth="1066.0">
                     <columns>
                       <TableColumn fx:id="prenom" prefWidth="221.60005795955658" text="Prenom" />
                       <TableColumn fx:id="commentaire" prefWidth="844.7998962402344" text="Commentaire" />
