--- a/src/main/resources/FXML/Profile.fxml
+++ b/src/main/resources/FXML/Profile.fxml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.ProfileController">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="491.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller ="org.fsb.FlixFlow.Controllers.ProfileController">
    <children>
-      <Label layoutX="14.0" layoutY="14.0" text="Recent Page" />
+      <Label layoutX="272.0" layoutY="43.0" text="Profile" />
+      <Label layoutX="162.0" layoutY="89.0" text="Name" />
+      <Label layoutX="153.0" layoutY="157.0" text="Surname" />
+      <Label layoutX="164.0" layoutY="255.0" text="email" />
+      <Label layoutX="167.0" layoutY="317.0" text="date" />
+      <TextField fx:id="nameField" layoutX="235.0" layoutY="86.0" />
+      <TextField fx:id="SurNameField" layoutX="235.0" layoutY="144.0" />
+      <TextField fx:id="emailField" layoutX="249.0" layoutY="252.0" />
+      <DatePicker fx:id="date" layoutX="236.0" layoutY="314.0" />
+      <Button fx:id="updateButton" layoutX="168.0" layoutY="397.0" mnemonicParsing="false" text="Update" />
+      <Button fx:id="deleteButton" layoutX="346.0" layoutY="400.0" mnemonicParsing="false" text="delete" />
+      <PasswordField fx:id="passwordField" layoutX="235.0" layoutY="205.0" />
+      <Label layoutX="166.0" layoutY="209.0" text="Pass" />
    </children>
 </AnchorPane>
