--- a/src/main/resources/FXML/SeasonLayout.fxml
+++ b/src/main/resources/FXML/SeasonLayout.fxml
@@ -9,7 +9,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.web.WebView?>
-<AnchorPane prefHeight="886.0" prefWidth="934.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.SeasonLayoutController" >
+<?import javafx.scene.control.Slider?>
+
+<AnchorPane prefHeight="886.0" prefWidth="934.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.SeasonLayoutController">
          <children>
             <Rectangle fx:id="image" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="253.0" layoutX="132.0" layoutY="90.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
             <Label fx:id="seasonNumLabel" layoutX="103.0" layoutY="37.0">
@@ -27,8 +29,8 @@
             <ListView fx:id="listcomment" layoutX="125.0" layoutY="557.0" prefHeight="292.0" prefWidth="704.0" />
             <Button fx:id="watchnow" layoutX="427.0" layoutY="399.0" mnemonicParsing="false" text="Watch Now" />
             <Button fx:id="watchtrailer" layoutX="545.0" layoutY="399.0" mnemonicParsing="false" text="Watch trailer" />
-            <Button fx:id="addfav" layoutX="665.0" layoutY="399.0" mnemonicParsing="false" text="add to favorite " />
-            <Button fx:id="votebtn" layoutX="803.0" layoutY="399.0" mnemonicParsing="false" text="Vote" />
-            <WebView fx:id="videoweb" layoutX="427.0" layoutY="90.0" prefHeight="246.0" prefWidth="423.0" />
+<Slider fx:id="saisonRatingSlider" layoutX="706.0" layoutY="399.0" />
+<Button fx:id="submitSaisonRatingButton" layoutX="706.0" layoutY="430.0" mnemonicParsing="false" text="Submit Rating" />
+<WebView fx:id="videoweb" layoutX="427.0" layoutY="90.0" prefHeight="246.0" prefWidth="423.0" />
          </children>
 </AnchorPane>
