--- a/src/main/resources/FXML/MovieSeriesDetails.fxml
+++ b/src/main/resources/FXML/MovieSeriesDetails.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -13,8 +14,6 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.control.Slider?>
-
 
 <StackPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1900.0" prefWidth="1280.0" stylesheets="@../style/movie-style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.MovieSeriesDetailsController">
     <children>
@@ -98,9 +97,11 @@
                      </children>
                   </HBox>
                   <ListView fx:id="actorslist" prefHeight="410.0" prefWidth="952.0" />
-                  <Button fx:id="commentbtn" mnemonicParsing="false" text="add comment" translateX="175.0" translateY="106.0" />
-                  <TextField fx:id="txtcomment" prefHeight="26.0" prefWidth="631.0" translateX="-200.0" />
-                  <TableView fx:id="tab" prefHeight="410.0" prefWidth="1066.0">
+                  <Button fx:id="deleteCommentButton" mnemonicParsing="false" text="delete" translateX="325.0" translateY="216.0" />
+                  <Button fx:id="modifyCommentButton" mnemonicParsing="false" text="Modify" translateX="260.0" translateY="110.0" />
+                  <Button fx:id="commentbtn" mnemonicParsing="false" text="add comment" translateX="175.0" translateY="5.0" />
+                  <TextField fx:id="txtcomment" prefHeight="26.0" prefWidth="631.0" translateX="-200.0" translateY="-100.0" />
+                  <TableView fx:id="tab" prefHeight="410.0" prefWidth="1066.0" translateY="-156.0">
                     <columns>
                       <TableColumn fx:id="prenom" prefWidth="221.60005795955658" text="Prenom" />
                       <TableColumn fx:id="commentaire" prefWidth="844.7998962402344" text="Commentaire" />
