--- a/src/main/resources/FXML/SeasonLayout.fxml
+++ b/src/main/resources/FXML/SeasonLayout.fxml
@@ -3,13 +3,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.web.WebView?>
-<?import javafx.scene.control.Slider?>
 
 <AnchorPane prefHeight="886.0" prefWidth="934.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.SeasonLayoutController">
          <children>
@@ -29,8 +29,12 @@
             <ListView fx:id="listcomment" layoutX="125.0" layoutY="557.0" prefHeight="292.0" prefWidth="704.0" />
             <Button fx:id="watchnow" layoutX="427.0" layoutY="399.0" mnemonicParsing="false" text="Watch Now" />
             <Button fx:id="watchtrailer" layoutX="545.0" layoutY="399.0" mnemonicParsing="false" text="Watch trailer" />
-<Slider fx:id="saisonRatingSlider" layoutX="706.0" layoutY="399.0" />
+<Slider fx:id="saisonRatingSlider" blockIncrement="1.0" layoutX="706.0" layoutY="399.0" majorTickUnit="1.0" max="10.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
 <Button fx:id="submitSaisonRatingButton" layoutX="706.0" layoutY="430.0" mnemonicParsing="false" text="Submit Rating" />
 <WebView fx:id="videoweb" layoutX="427.0" layoutY="90.0" prefHeight="246.0" prefWidth="423.0" />
+      <Button fx:id="modifbtn" layoutX="716.0" layoutY="513.0" mnemonicParsing="false" text="Modify" />
+      <Button fx:id="delbtn" layoutX="794.0" layoutY="513.0" mnemonicParsing="false" text="Delete" />
+      <Label layoutX="677.0" layoutY="359.0" text="Average :" />
+      <Label fx:id="average" layoutX="743.0" layoutY="359.0" text="Label" />
          </children>
 </AnchorPane>
