--- a/src/main/resources/FXML/episode.fxml
+++ b/src/main/resources/FXML/episode.fxml
@@ -3,11 +3,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.web.WebView?>
-<?import javafx.scene.control.Slider?>
+
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="685.0" prefWidth="840.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.EpisodeLayoutController">
    <children>
       <ListView fx:id="episodeListView" layoutX="45.0" layoutY="21.0" prefHeight="474.0" prefWidth="208.0" />
@@ -16,9 +17,13 @@
       <Label fx:id="VUES" layoutX="324.0" layoutY="397.0" />
       <Label layoutX="324.0" layoutY="440.0" text="Synopsis :" />
       <Text fx:id="synopsistext" layoutX="327.0" layoutY="491.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-<Slider fx:id="episodeRatingSlider" layoutX="459.0" layoutY="317.0" />
-<Button fx:id="submitEpisodeRatingButton" layoutX="459.0" layoutY="348.0" mnemonicParsing="false" text="Submit Rating" />      <TextField layoutX="324.0" layoutY="504.0" prefHeight="26.0" prefWidth="336.0" />
-      <Button layoutX="685.0" layoutY="505.0" mnemonicParsing="false" text="Add comment" />
+<Slider fx:id="episodeRatingSlider" blockIncrement="1.0" layoutX="459.0" layoutY="317.0" majorTickUnit="1.0" max="10.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
+<Button fx:id="submitEpisodeRatingButton" layoutX="459.0" layoutY="348.0" mnemonicParsing="false" text="Submit Rating" />      <TextField fx:id="txtcomment" layoutX="263.0" layoutY="504.0" prefHeight="26.0" prefWidth="336.0" />
+      <Button fx:id="addcommentbtn" layoutX="613.0" layoutY="504.0" mnemonicParsing="false" text="Add comment" />
       <ListView fx:id="listcomments" layoutX="320.0" layoutY="540.0" prefHeight="125.0" prefWidth="458.0" />
+      <Button fx:id="modifbtn" layoutX="714.0" layoutY="504.0" mnemonicParsing="false" text="mdfy" />
+      <Button fx:id="delbtn" layoutX="765.0" layoutY="504.0" mnemonicParsing="false" text="del" />
+      <Label layoutX="631.0" layoutY="369.0" text="Average : " />
+      <Label fx:id="average" layoutX="700.0" layoutY="369.0" text="Label" />
    </children>
 </AnchorPane>
