--- a/src/main/resources/FXML/SearchSeries.fxml
+++ b/src/main/resources/FXML/SearchSeries.fxml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="org.fsb.FlixFlow.Controllers.SearchSeriesController">
-    <HBox spacing="20">
-        <VBox>
-            <Label text="Search Series" />
-            <!-- Add search options (criteria) here -->
-            <TextField fx:id="seriesTitleSearchField" />
-            <TextField fx:id="releaseYearSearchField" />
-        </VBox>
-        <FlowPane fx:id="seriesFlowPane" />
-    </HBox>
-</AnchorPane>
+<VBox xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.SearchSeriesController">
+   <children>
+      <AnchorPane prefHeight="584.0" prefWidth="893.0">
+           <FlowPane fx:id="seriesFlowPane" layoutX="290.0" layoutY="7.0" prefHeight="558.0" prefWidth="591.0" />
+            <Label text="Search Movies" />
+         <TextField fx:id="serieTitleSearchTextField" layoutX="78.0" layoutY="68.0" />
+         <TextField fx:id="releaseYearSearchTextField" layoutX="79.0" layoutY="142.0" />
+         <TextField fx:id="genreSearchTextField" layoutX="80.0" layoutY="219.0" />
+         <TextField fx:id="languageSearchTextField" layoutX="80.0" layoutY="306.0" />
+         <TextField fx:id="countryOfOriginSearchTextField" layoutX="78.0" layoutY="388.0" />
+         <TextField fx:id="producerSearchTextField" layoutX="78.0" layoutY="468.0" />
+         <TextField fx:id="actorSearchTextField" layoutX="77.0" layoutY="540.0" />
+      </AnchorPane>
+   </children>
+</VBox>
