--- a/src/main/resources/FXML/dash.fxml
+++ b/src/main/resources/FXML/dash.fxml
@@ -8,8 +8,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.ScrollBar?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@Styles/discord_theme.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.UserDashboardController">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="799.0" prefWidth="1280.0" stylesheets="@Styles/discord_theme.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.UserDashboardController">
    <top>
       <HBox alignment="CENTER" prefHeight="50.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
          <ImageView fitHeight="97.0" fitWidth="106.0" pickOnBounds="true" preserveRatio="true">
@@ -32,16 +34,27 @@
       </HBox>
    </top>
    <left>
-      <VBox alignment="TOP_CENTER" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
+     <VBox alignment="TOP_CENTER" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
+    <ScrollPane fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="AS_NEEDED">
+        <VBox alignment="TOP_CENTER" spacing="10.0">
          <Button fx:id="btnhome" mnemonicParsing="false" onAction="#handleHomeClick" text="Home" />
          <Button mnemonicParsing="false" onAction="#handleFavoriteClick" text="Favorite" />
          <Button mnemonicParsing="false" onAction="#handleScheduleClick" text="Schedule" />
          <Button mnemonicParsing="false" onAction="#handleMoviesClick" text="Movies" />
          <Button mnemonicParsing="false" onAction="#handleSeriesClick" text="Series" />
-         <Button mnemonicParsing="false" text="Admin Space" />
-         <Button mnemonicParsing="false" text="Acteur Space" />
-         <Button mnemonicParsing="false" text="Producteur Space" />
-      </VBox>
+         <Button mnemonicParsing="false" onAction="#handleRankClick" text="RANK" />
+         <Button mnemonicParsing="false" onAction="#hendleaddactor" text="ADDActeur" />
+         <Button mnemonicParsing="false" onAction="#handleaddproducteur" text="ADDProducteur" />
+         <Button mnemonicParsing="false" onAction="#handleaddserie" text="ADDSerie" />
+         <Button mnemonicParsing="false" onAction="#handleaddsaison" text="ADDSaison" />
+         <Button mnemonicParsing="false" onAction="#handleaddepisode" text="ADDEpisode" />
+         <Button mnemonicParsing="false" onAction="#handleaddfilm" text="ADDFilm" />
+         <Button mnemonicParsing="false" onAction="#handleadduser" text="ADDUSER" />
+         <Button mnemonicParsing="false" onAction="#handlerole_saison" text="Add r1" />
+         <Button mnemonicParsing="false" onAction="#handlerole_film" text="Add r2" />
+        </VBox>
+    </ScrollPane>
+</VBox>
    </left>
    <center>
       <ScrollPane fitToWidth="true">
