--- a/src/main/resources/FXML/FilmAdd.fxml
+++ b/src/main/resources/FXML/FilmAdd.fxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.FilmAddController" spacing="10">
     <HBox spacing="10">
         <!-- Additional fields for film details -->
