--- a/src/main/resources/FXML/ProducteurAdd.fxml
+++ b/src/main/resources/FXML/ProducteurAdd.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.ProducteurAddController" spacing="10">
     <HBox spacing="10">
         <Label text="ID:" />
