--- a/src/main/resources/FXML/FilmAdd.fxml
+++ b/src/main/resources/FXML/FilmAdd.fxml
@@ -1,21 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.FilmAddController" spacing="10">
-    <HBox spacing="10">
-        <!-- Additional fields for film details -->
-    </HBox>
-    <HBox spacing="10">
-        <Button fx:id="addButton" text="Add" onAction="#addFilm" />
-        <Button fx:id="updateButton" text="Update" onAction="#updateFilm" />
-        <Button fx:id="deleteButton" text="Delete" onAction="#deleteFilm" />
-    </HBox>
-    <TableView fx:id="filmTable">
-        <columns>
-            <!-- TableColumn elements for each film attribute -->
-        </columns>
-    </TableView>
+
+<VBox spacing="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="org.fsb.FlixFlow.Controllers.FilmAddController">
+	<Label text="Film CRUD Operations" />
+	<GridPane hgap="10" vgap="10">
+		<Label text="ID" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+		<Label text="Name" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+		<Label text="Release Year" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+		<Label text="Image URL" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+		<Label text="Video URL" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+		<Label text="Genre ID" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+		<Label text="Language ID" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+		<Label text="Country ID" GridPane.columnIndex="0" GridPane.rowIndex="8" />
+		<Label text="Producer ID" GridPane.columnIndex="0" GridPane.rowIndex="9" />
+		<Label text="Synopsis" GridPane.columnIndex="0" GridPane.rowIndex="10" />
+
+		<TextField fx:id="idTextField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+		<TextField fx:id="nameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+		<TextField fx:id="releaseYearTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+		<TextField fx:id="imageUrlTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+		<TextField fx:id="videoUrlTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+		<TextField fx:id="genreIdTextField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+		<TextField fx:id="languageIdTextField" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+		<TextField fx:id="countryIdTextField" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+		<TextField fx:id="producerIdTextField" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+		<TextField fx:id="synopsisTextField" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+      <columnConstraints>
+         <ColumnConstraints />
+         <ColumnConstraints />
+      </columnConstraints>
+      <rowConstraints>
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+      </rowConstraints>
+	</GridPane>
+
+	<HBox spacing="10">
+		<Button onAction="#createFilm" text="Create" />
+		<Button onAction="#updateFilm" text="Update" />
+		<Button onAction="#deleteFilm" text="Delete" />
+	</HBox>
+
+	<Label text="Films List" />
+	<TableView fx:id="FilmTableView">
+		<columns>
+			<TableColumn fx:id="idColumn" text="ID" />
+			<TableColumn fx:id="NameColumn" text="Name" />
+			<TableColumn fx:id="ReleaseYearColumn" text="Release Year" />
+			<TableColumn fx:id="Image_URLColumn" text="Image URL" />
+			<TableColumn fx:id="Video_URLColumn" text="Video URL" />
+			<TableColumn fx:id="Genre_IDColumn" text="Genre ID" />
+			<TableColumn fx:id="Language_IDColumn" text="Language ID" />
+			<TableColumn fx:id="Country_IDColumn" text="Country ID" />
+			<TableColumn fx:id="Producer_IDColumn" text="Producer ID" />
+			<TableColumn fx:id="SynopsisColumn" text="Synopsis" />
+		</columns>
+	</TableView>
 </VBox>
